--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                </p>
             <h3 id='city'><u>My city</u></h3> 
             <h1 align="center"> <u><i>KANPUR</i></u></h1>
-            <img src="C:\Users\91638\Downloads\kanpur3.jpg"alt= "human image" width="250px" >
-            <img src="C:\Users\91638\Downloads\kanpur 3.jpg"alt= "human image" width="200px" >
-            <img src="C:\Users\91638\Downloads\kanpur2.jpg"alt= "human image" width="200px" >
-            <img src="C:\Users\91638\Downloads\kanpur4.jpg"alt= "human image" width="200px" >
-            <img src="C:\Users\91638\Downloads\kanpur5.jpg"alt= "human image" width="200px" >
+            <img src="kanpur3.jpg"alt= "human image" width="250px" >
+            <img src="kanpur 3.jpg"alt= "human image" width="200px" >
+            <img src="kanpur2.jpg"alt= "human image" width="200px" >
+            <img src="kanpur4.jpg"alt= "human image" width="200px" >
+            <img src="kanpur5.jpg"alt= "human image" width="200px" >
             
             <P> Kanpur or Cawnpur is an industrial city in the central-western part of the state of Uttar Pradesh, India.
                  Founded in 1207, Kanpur became one of the most important commercial and military stations of British India. Kanpur is also the financial capital of Uttar Pradesh. 
